[package]
name = "wasm-ttt-rs"
version = "0.1.0"
authors = ["skim <skim@swainslane.co>"]
repository = "https://github.com/sl4m/wasm-ttt-rs"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
debug = ["console_error_panic_hook"]

[dependencies]
ttt-rs = { git = "https://github.com/sl4m/ttt-rs", rev = "ba0488fc8acd85f107db5b21bffadea7fa112e3a" }
wasm-bindgen = "0.2.63"

console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = "s"
