[package]
name = "wasm-ttt-rs"
version = "0.1.0"
authors = ["skim <skim@swainslane.co>"]
repository = "https://github.com/sl4m/wasm-ttt-rs"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ttt-rs = { git = "https://github.com/sl4m/ttt-rs", rev = "78b9ef00255a84c98f3f8d65805a025431b90b86" }
wasm-bindgen = "0.2.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = "s"
