[package]
name = "wasm-ttt-rs"
version = "0.1.0"
authors = ["skim <skim@swainslane.co>"]
repository = "https://github.com/sl4m/wasm-ttt-rs"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ttt-rs = { git = "https://github.com/sl4m/ttt-rs", rev = "f8bcbc222b5ab35f0619d84598b7d97aefbbe626" }
wasm-bindgen = "0.2.63"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
lto = true
opt-level = "s"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
